@@ -1,4 +1,4 @@
-/*	$OpenBSD: misc.h,v 1.12 2002/03/19 10:49:35 markus Exp $	*/
+/*	$OpenBSD: misc.h,v 1.13 2004/05/08 00:01:37 deraadt Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -31,3 +31,5 @@ struct arglist {
 	int     nalloc;
 };
 void	 addargs(arglist *, char *, ...) __attribute__((format(printf, 2, 3)));
+
+char	*tilde_expand_filename(const char *, uid_t);
