@@ -9,6 +9,10 @@
    - jmc@cvs.openbsd.org 2004/05/06 11:24:23
      [ssh_config.5]
      typo from John Cosimano (PR 3770);
+   - deraadt@cvs.openbsd.org 2004/05/08 00:01:37
+     [auth.c clientloop.c misc.h servconf.c ssh.c sshpty.h sshtty.c
+     tildexpand.c], removed: sshtty.h tildexpand.h
+     make two tiny header files go away; djm ok
 
 20040502
  - (dtucker) OpenBSD CVS Sync
@@ -1085,4 +1089,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3344 2004/05/13 03:03:56 dtucker Exp $
+$Id: ChangeLog,v 1.3345 2004/05/13 06:06:46 dtucker Exp $
